--- a/themes/hugo-hero-theme/assets/scss/pages/contact/_page-contact.scss
+++ b/themes/hugo-hero-theme/assets/scss/pages/contact/_page-contact.scss
@@ -1,5 +1,8 @@
 .page-contact {
 
-  
+    strong {
+        color: $primary;
+        font-family: sans-serif, -apple-system;
+      }
 
 }
